--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,6 +5,5 @@
   "username": "root",
   "password": "root",
   "database": "nestjsPost",
-  "entities": ["src/**/**.entity{.ts,.js}"],
-  "synchronize": true
+  "entities": ["src/**/**.entity{.ts,.js}"]
 }
