--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
     "save": "^2.3.3",
+    "sqlite3": "^4.0.8",
     "swagger-ui-express": "^4.0.2",
     "typeorm": "^0.2.17"
   },
