--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,5 +5,7 @@
   "username": "root",
   "password": "root",
   "database": "nestjsPost",
-  "entities": ["src/**/**.entity{.ts,.js}"]
+  "entities": ["src/**/**.entity{.ts,.js}"],
+  "logger": "typeormLoggerService",
+  "logging": true
 }
